--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,21 @@
 /*Reset*/
 
-*{padding: 0; margin: 0; font-size: 100%; box-sizing: border-box; font-family: 'Opens Sans', sans-serif};
+*{
+    padding: 0; 
+    margin: 0;
+    font-size: 100%; 
+    box-sizing: border-box; 
+    font-family: 'Opens Sans', sans-serif
+};
 
-ul{
+li, nav{
+    list-style-type: none;
+}
+
+nav, li{
     list-style: none;
 }
+
 
 a{
     text-decoration: none; 
@@ -23,4 +34,32 @@ header{
     position: absolute;
     top: 0;
     left: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 50px;
+}
+
+header img{
+    width: 200px;
+}
+
+header nav{
+    display: flex;
+}
+
+header li, a{
+    color: #191c03;
+}
+
+header li{
+    margin: 0 15px;
+}
+
+header li:first-child{
+    margin-left: 0;
+}
+
+header li:last-child{
+    margin-right: 0px;
 }
