--- a/css/responsive.css
+++ b/css/responsive.css
@@ -18,7 +18,6 @@
     }
 
     /*Imagens*/
-    .conheça-o-hotel .grid li.small, .conheça-o-hotel .grid li.large{
-        flex-basis: 100%;
+    .conheça-o-hotel .grid {
+        flex-direction: row;
     }
-}
