--- a/css/responsive.css
+++ b/css/responsive.css
@@ -17,4 +17,19 @@
         margin-bottom: 15px;
     }
 
+    /*Imagem*/
+    .conheça-o-hotel .grid{
+        width: 40%;
+        display: flex;
+        flex-wrap: nowrap;
+    }
+
+    .conheça-o-hotel .grid li.small{
+        flex-basis: 20%;
+    }
+    
+    .conheça-o-hotel .grid li.large{
+        flex-basis: 30%;
+    }
+    
 }
