--- a/css/responsive.css
+++ b/css/responsive.css
@@ -5,6 +5,10 @@
     header img {
         margin-bottom: 15px;
     }
+    /*Botão*/
+    a .btn{
+      font-size: 12px;  
+    }
 
     /*Hero*/
     .hero h1{
