--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,10 @@ header li:last-child{
         margin-bottom: 15px;
     }
 
+    h3{
+        text-align: center;
+    }
+
 }
 
 /*conheca o Hotel*/
