--- a/css/style.css
+++ b/css/style.css
@@ -190,3 +190,69 @@ header li:last-child{
         flex-basis: 100%;
     }
 }
+
+/*Caracteristicas*/
+
+.caracteristicas{
+    background-color:#191c03;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 100px 50px;
+
+}
+
+.caracteristicas h3{
+    font-size: 2rem;
+    margin-bottom: 35px;
+    text-align: center;
+    color: #ffffff;
+}
+
+.caracteristicas p{
+    max-width: 800px;
+    margin-bottom: 35px;
+    text-align: center;
+    color: #ffffff;
+}
+
+.caracteristicas hr{
+    width: 200px;
+    height: 2px;
+    background-color: #fff;
+    margin-bottom: 70px;
+    border: none;
+    border-radius: 8px;
+    
+}
+
+.caracteristicas .grid{
+    width: 100%;
+    display: flex;
+}
+
+.caracteristicas .grid li{
+    padding: 0 30px;
+    text-align: center;
+}
+
+.caracteristicas .grid li i{
+    color: #c3c63b;
+    font-size: 3.5rem;
+    margin-bottom: 30px;
+}
+
+.caracteristicas .grid li h4{
+    font-size: 1.5rem;
+    color: #c3c63b;
+}
+
+.caracteristicas .grid li p{
+    color: #fff;
+}
+
+@media(max-width: 750px){
+    .caracteristicas .grid{
+        flex-direction: column;
+    }
+}
