--- a/css/style.css
+++ b/css/style.css
@@ -313,4 +313,45 @@ header li:last-child{
     color: #c3c63b;
     text-transform: uppercase;
     border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+@media(max-width: 700px){
+    .newsletter input{
+        flex-basis: 100%;
+        margin-bottom: 15px;
+        align-items: center;
+        
+    }
+}
+
+/*Footer*/
+footer{
+    display: flex;
+    flex-direction: column;
+    background-color: #191c03;
+    padding: 50px 0px;
+    align-items: center;
+}
+
+footer ul{
+    display: flex;
+    margin-bottom: 25px;
+}
+
+footer ul li{
+    margin-right: 10px;
+}
+footer li:last-child{
+    margin-right: 0;
+}
+footer ul li a{
+    color: #c3c63b;
+    font-size: 2rem;
+}
+
+footer p{
+    color: #c3c63b;
+    text-align: center;
+    flex-si
 }
